# ace-audiophile

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  _git_push.bat  package.json  pnpm-lock.yaml  turbo.json
apps/android/: package.json
apps/android/src-tauri/: Cargo.toml  tauri.conf.json
apps/android/src-tauri/capabilities/: main.json
apps/android/src-tauri/src/: bridge.rs  lib.rs  main.rs
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: main.json
apps/desktop/src-tauri/migrations/: 0001_a5_schema_down.sql  0001_a5_schema_up.sql  0002_a6_radio_persistence_down.sql  0002_a6_radio_persistence_up.sql
apps/desktop/src-tauri/src/: autotag.rs  bridge.rs  commands.rs  db.rs  error.rs  lib.rs  main.rs  radio_browser.rs  watcher.rs
apps/linux/: package.json
apps/linux/src-tauri/: Cargo.toml  tauri.conf.json
apps/linux/src-tauri/capabilities/: main.json
apps/linux/src-tauri/src/: lib.rs  main.rs
docs/: index.md  phase-1.md  phase-2.md  phase-3.md  phase-A.md  phase-B.md  phase-C.md  platform-android.md  platform-linux.md  platform-windows.md
