[package]
name    = "audiophile-ace-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name          = "audiophile_ace_desktop_lib"
crate-type    = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "audiophile-ace-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri        = { version = "2", features = ["devtools"] }
tauri-plugin-shell  = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs     = "2"
tauri-plugin-notification = "2"
tauri-plugin-sql    = { version = "2", features = ["sqlite"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
libloading   = "0.8"
walkdir      = "2"
notify       = { version = "7", features = ["macos_fsevent"] }
tokio        = { version = "1", features = ["sync"] }
reqwest      = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
urlencoding  = "2"

[profile.release]
panic   = "abort"
codegen-units = 1
lto     = true
opt-level = 3
strip   = true
