[package]
name    = "audiophile-ace-linux"
version = "0.1.0"
edition = "2021"

[lib]
name          = "audiophile_ace_linux_lib"
crate-type    = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "audiophile-ace-linux"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri        = { version = "2", features = ["devtools"] }
tauri-plugin-shell  = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs     = "2"
tauri-plugin-notification = "2"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"

[profile.release]
panic   = "abort"
codegen-units = 1
lto     = true
opt-level = 3
strip   = true
